--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
@@ -16,34 +16,49 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/HyPassword" />
+        app:layout_constraintTop_toBottomOf="@+id/HyPasswordFrame" />
 
-    <EditText
-        android:id="@+id/HyPassword"
-        android:layout_width="214dp"
-        android:layout_height="26dp"
-        android:hint="password"
-        android:inputType="textPassword"
-        android:background="#00000000"
-        app:passwordToggleEnabled="true"
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/HyPasswordFrame"
+        android:layout_width="211dp"
+        android:layout_height="51dp"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <EditText
-        android:id="@+id/HyUsername"
-        android:layout_width="215dp"
-        android:layout_height="26dp"
-        android:hint="username"
-        android:inputType="textPersonName"
-        android:background="#00000000"
-        app:layout_constraintBottom_toTopOf="@+id/HyPassword"
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/HyPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:hint="password"
+            android:inputType="textPassword"
+            app:passwordToggleEnabled="true" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="211dp"
+        android:layout_height="51dp"
+        app:layout_constraintBottom_toTopOf="@+id/HyPasswordFrame"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.908" />
+        app:layout_constraintVertical_bias="0.908">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/HyUsername"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#00000000"
+            android:hint="username"
+            android:inputType="textPersonName" />
+    </com.google.android.material.textfield.TextInputLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
