--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_set_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_set_donation_goal.xml
@@ -8,36 +8,49 @@
 
     <RelativeLayout
         android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_width="417dp"
+        android:layout_height="242dp"
         android:background="@color/green"
-        android:layout_marginBottom="300px"
-        app:layout_constraintTop_toTopOf="parent"
-        >
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <EditText
-            android:id="@+id/goalTitle"
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="80dp"
-            android:layout_weight="0.33"
-            android:hint="Title of the Goal"
-            android:textAlignment="viewStart"
-            android:textColor="@color/black"
-            android:textSize="15dp" />
+            android:layout_weight="0.33">
 
-        <EditText
-            android:id="@+id/moneyNeeded"
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/goalTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:hint="Title of the Goal"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+
+        <com.google.android.material.textfield.TextInputLayout
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="120dp"
-            android:layout_weight="0.33"
-            android:hint="How much money do I need"
-            android:textAlignment="viewStart"
-            android:textColor="@color/black"
-            android:textSize="15dp" />
+            android:layout_marginTop="160dp"
+            android:layout_weight="0.33">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/moneyNeeded"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/border"
+                android:hint="How much money do I need"
+                android:textAlignment="viewStart"
+                android:textColor="@color/black"
+                android:textSize="15dp" />
+        </com.google.android.material.textfield.TextInputLayout>
     </RelativeLayout>
 
     <Button
@@ -52,28 +65,35 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
-    <EditText
-        android:id="@+id/goalDescription"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:gravity="top|left"
-        android:hint="What am I planning to do with the money"
-        android:inputType="textMultiLine"
-        android:lines="12"
-        android:textColor="@color/black"
-        android:textSize="15dp"
+    <com.google.android.material.textfield.TextInputLayout
+        android:layout_width="293dp"
+        android:layout_height="235dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.645">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/goalDescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/border"
+            android:gravity="top|left"
+            android:hint="What am I planning to do with the money"
+            android:inputType="textMultiLine"
+            android:lines="12"
+            android:textColor="@color/black"
+            android:textSize="15dp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
 
     <TextClock
         android:id="@+id/date"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="196dp"
+        android:layout_marginBottom="72dp"
         android:format12Hour="dd-MMM-yyyy"
         android:gravity="center_horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
