--- a/BeingSeenApp/app/src/main/res/menu/org_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/org_nav_menu.xml
@@ -21,4 +21,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:label="Transaction History"
         android:title="Transaction History" />
+    <item
+        android:id="@+id/about_us"
+        android:icon="@drawable/ic_baseline_eco_24"
+        android:label="About Us"
+        android:title="About Us" />
 </menu>
