--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_spend_money.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_spend_money.xml
@@ -44,39 +44,39 @@
       app:layout_constraintTop_toTopOf="parent"
       app:layout_constraintVertical_bias="0.01" />
 
-  <TextView
-      android:id="@+id/DonateToText"
-      android:layout_width="151dp"
-      android:layout_height="39dp"
-      android:layout_marginTop="16dp"
-      android:text="Transfer to this merchant: "
-      android:textAlignment="viewStart"
-      android:textColor="@color/black"
-      android:textSize="15dp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.307"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageHy"
-      app:layout_constraintVertical_bias="0.060000002" />
+<!--  <TextView-->
+<!--      android:id="@+id/DonateToText"-->
+<!--      android:layout_width="151dp"-->
+<!--      android:layout_height="39dp"-->
+<!--      android:layout_marginTop="16dp"-->
+<!--      android:text="Transfer to this merchant: "-->
+<!--      android:textAlignment="viewStart"-->
+<!--      android:textColor="@color/black"-->
+<!--      android:textSize="15dp"-->
+<!--      app:layout_constraintBottom_toBottomOf="parent"-->
+<!--      app:layout_constraintEnd_toEndOf="parent"-->
+<!--      app:layout_constraintHorizontal_bias="0.307"-->
+<!--      app:layout_constraintStart_toStartOf="parent"-->
+<!--      app:layout_constraintTop_toBottomOf="@+id/imageHy"-->
+<!--      app:layout_constraintVertical_bias="0.060000002" />-->
 
-  <EditText
-      android:id="@+id/donateUsername"
-      android:layout_width="99dp"
-      android:layout_height="38dp"
-      android:layout_marginTop="16dp"
-      android:gravity="top|left"
-      android:hint="Username"
-      android:maxHeight="?actionBarSize"
-      android:minHeight="?actionBarSize"
-      android:textColor="@color/black"
-      android:textSize="16sp"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.74"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toBottomOf="@+id/imageHy"
-      app:layout_constraintVertical_bias="0.061" />
+<!--  <EditText-->
+<!--      android:id="@+id/donateUsername"-->
+<!--      android:layout_width="99dp"-->
+<!--      android:layout_height="38dp"-->
+<!--      android:layout_marginTop="16dp"-->
+<!--      android:gravity="top|left"-->
+<!--      android:hint="Username"-->
+<!--      android:maxHeight="?actionBarSize"-->
+<!--      android:minHeight="?actionBarSize"-->
+<!--      android:textColor="@color/black"-->
+<!--      android:textSize="16sp"-->
+<!--      app:layout_constraintBottom_toBottomOf="parent"-->
+<!--      app:layout_constraintEnd_toEndOf="parent"-->
+<!--      app:layout_constraintHorizontal_bias="0.74"-->
+<!--      app:layout_constraintStart_toStartOf="parent"-->
+<!--      app:layout_constraintTop_toBottomOf="@+id/imageHy"-->
+<!--      app:layout_constraintVertical_bias="0.061" />-->
 
   <EditText
       android:id="@+id/dnDonoAmt"
