--- a/BeingSeenApp/app/src/main/res/layout/activity_search_homeless.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_search_homeless.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchUI.SearchPage">
+    tools:context=".SearchUI.SearchYouth">
 
     <TextView
         android:id="@+id/search_hint2"
