--- a/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_hy_login.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomelessYouthUiFrontend.HyLoginActivity">
+    tools:context=".SignUpAndLogin.HyLoginActivity">
 
     <Button
         android:id="@+id/HyLoginButton"
