--- a/BeingSeenApp/app/src/main/res/layout/donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/donation.xml
@@ -18,7 +18,7 @@
         android:text="reciever"
         android:textAppearance="@style/TextAppearance.AppCompat.Display2"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toTopOf="@+id/dnt_amount_frame"
+        app:layout_constraintBottom_toTopOf="@+id/dnt_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
@@ -26,43 +26,30 @@
         app:layout_constraintVertical_bias="0.0" />
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/dnt_amount_frame"
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="16dp"
-        android:hint="Amount"
-        android:textColorHint="@color/black"
-        app:hintAnimationEnabled="false"
-        app:hintEnabled="false"
-        app:hintTextAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:layout_width="217dp"
+        android:layout_height="61dp"
+        app:layout_constraintBottom_toTopOf="@+id/dnt_confirm"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dnt_reciever">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.6">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/dnt_amount"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:bufferType="editable"
-            android:capitalize="none"
-            android:clickable="true"
-            android:hint="Amount"
-            android:inputType="number"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            app:textInputLayoutFocusedRectEnabled="true" />
+            android:background="#00000000"
+            android:hint="amount"
+            android:inputType="textPersonName" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/dnt_confirm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="80dp"
+        android:textSize="30dp"
         android:background="@color/teal_700"
         android:backgroundTint="@color/teal_700"
         android:foregroundTint="@color/teal_700"
