--- a/BeingSeenApp/app/src/main/res/layout/activity_org_main_navbar.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_org_main_navbar.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".OrganizationUiFrontend.OrgMainNavbarActivity">
+    tools:context=".NavbarActivities.OrgMainNavbarActivity">
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/orgBottomNavigationView"
         android:layout_width="match_parent"
