--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_donation_goal.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContentPage.DnDonationGoalActivity">
+    tools:context=".ContentPage.ViewDonationGoalActivity">
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="match_parent"
