--- a/BeingSeenApp/app/src/main/res/layout/fragment_bs_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_bs_user_profile_view_balance.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".BeingSeenUiFrontend.BsUserProfileViewBalanceFragment">
+    tools:context=".Profiles.BsUserProfileFragment">
 
     <RelativeLayout
         android:id="@+id/textView"
