--- a/BeingSeenApp/app/src/main/res/layout/fragment_dn_content_page.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_dn_content_page.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ContentPage.DnContentPageFragment">
+    tools:context=".ContentPage.ContentPageFragment">
 
     <TextView
         android:id="@+id/content_page_txt"
