--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile_view_balance.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MerchantUiFrontend.MerUserProfileViewBalanceFragment">
+    tools:context=".Profiles.MerUserProfileFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <RelativeLayout
