--- a/BeingSeenApp/app/src/main/res/layout/fragment_search_page.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_search_page.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SearchUI.SearchPageFragment">
+    tools:context=".SearchForYouth.SearchForYouthFragment">
 
     <ImageButton
         android:id="@+id/SearchUserName"
