--- a/BeingSeenApp/app/src/main/res/navigation/mer_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/mer_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/mer_profile"
-        android:name="com.example.myapplication.MerchantUiFrontend.MerUserProfileViewBalanceFragment"
+        android:name="com.example.myapplication.Profiles.MerUserProfileFragment"
         android:label="fragment_mer_user_profile_view_balance"
         tools:layout="@layout/fragment_mer_user_profile_view_balance" />
     <fragment
