--- a/BeingSeenApp/app/src/main/res/layout/activity_view_donation_goal.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_view_donation_goal.xml
@@ -17,50 +17,24 @@
 
     </RelativeLayout>
 
-    <!--    <ImageView-->
-    <!--        android:id="@+id/HyPfPic"-->
-    <!--        android:layout_width="150dp"-->
-    <!--        android:layout_height="200dp"-->
-    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
-    <!--        app:layout_constraintEnd_toEndOf="parent"-->
-    <!--        app:layout_constraintHorizontal_bias="0.5"-->
-    <!--        app:layout_constraintVertical_bias="0.1"-->
-    <!--        app:layout_constraintStart_toStartOf="parent"-->
-    <!--        app:layout_constraintTop_toTopOf="parent"-->
-    <!--        android:scaleType="centerCrop"-->
-    <!--        android:src="@drawable/profile"-->
-    <!--        tools:srcCompat="@tools:sample/avatars" />-->
-
-    <!--    bar -->
-
-    <!--    <ProgressBar-->
-    <!--        android:id="@+id/HyProgressBar"-->
-    <!--        style="@style/Widget.AppCompat.ProgressBar.Horizontal"-->
-    <!--        android:layout_width="395dp"-->
-    <!--        android:layout_height="40dp"-->
-    <!--        android:layout_below="@id/HyPercentage"-->
-    <!--        android:progressTint="@color/green"-->
-    <!--        tools:ignore="MissingConstraints"-->
-    <!--        tools:layout_editor_absoluteX="8dp"-->
-    <!--        tools:layout_editor_absoluteY="405dp" />-->
-
     <TextView
         android:id="@+id/HyUsername"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="295dp"
+        android:layout_height="51dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.28" />
+        app:layout_constraintVertical_bias="0.175" />
 
     <TextView
         android:id="@+id/HyGoalTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="301dp"
+        android:layout_height="49dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -68,44 +42,49 @@
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.188" />
+        app:layout_constraintVertical_bias="0.261" />
 
     <TextView
         android:id="@+id/HyAmount"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="57dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.309"
+        app:layout_constraintHorizontal_bias="0.225"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38" />
+        app:layout_constraintVertical_bias="0.356" />
 
     <TextView
         android:id="@+id/HyPercentage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="145dp"
+        android:layout_height="57dp"
+        android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.688"
+        app:layout_constraintHorizontal_bias="0.781"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.38" />
+        app:layout_constraintVertical_bias="0.356" />
 
     <TextView
         android:id="@+id/HyGoalDescription"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="348dp"
+        android:layout_height="160dp"
+        android:textAlignment="textStart"
         android:textColor="@color/black"
         android:textSize="20dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.48" />
+        app:layout_constraintVertical_bias="0.567" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
