--- a/BeingSeenApp/app/src/main/res/navigation/hy_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/hy_navigation.xml
@@ -12,9 +12,9 @@
         tools:layout="@layout/fragment_youth_user_profile" />
     <fragment
         android:id="@+id/hy_send_money"
-        android:name="com.example.myapplication.SearchForMerchant.SearchMerchantFragment"
+        android:name="com.example.myapplication.SearchForMerchant.SearchForMerchantFragment"
         android:label="fragment_send_money"
-        tools:layout="@layout/fragment_search_merchant" />
+        tools:layout="@layout/fragment_search_for_merchant" />
     <fragment
         android:id="@+id/transaction_history"
         android:name="com.example.myapplication.TransactionHistory.TransactionHistoryFragment"
