--- a/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_transfer_to_merchant.xml
@@ -16,7 +16,7 @@
       >
 
   </RelativeLayout>
-<!--
+
   <ImageView
       android:id="@+id/imageHy"
       android:layout_width="150dp"
@@ -50,18 +50,17 @@
       app:layout_constraintTop_toTopOf="parent"
       />
 
--->
-  <Button
-      android:id="@+id/DnDonateBackEditButton"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:text="Back"
-      app:layout_constraintBottom_toBottomOf="parent"
-      app:layout_constraintEnd_toEndOf="parent"
-      app:layout_constraintHorizontal_bias="0.98"
-      app:layout_constraintStart_toStartOf="parent"
-      app:layout_constraintTop_toTopOf="parent"
-      app:layout_constraintVertical_bias="0.01" />
+<!--  <Button-->
+<!--      android:id="@+id/DnDonateBackEditButton"-->
+<!--      android:layout_width="wrap_content"-->
+<!--      android:layout_height="wrap_content"-->
+<!--      android:text="Back"-->
+<!--      app:layout_constraintBottom_toBottomOf="parent"-->
+<!--      app:layout_constraintEnd_toEndOf="parent"-->
+<!--      app:layout_constraintHorizontal_bias="0.98"-->
+<!--      app:layout_constraintStart_toStartOf="parent"-->
+<!--      app:layout_constraintTop_toTopOf="parent"-->
+<!--      app:layout_constraintVertical_bias="0.01" />-->
 
 
 <!--  <EditText-->
